# fastapi-socket-chat

./: .dockerignore  Dockerfile  ReadMe.md  connection_manager.py  const.py  controllers.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  schemas.py  services.py
tests/: test_main.py  test_services.py
